Added parameters to SSS.txt path